tests/baselines/reference/parserInterfaceDeclaration2.errors.txt
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts(1,13): error TS1005: '{' expected.
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts(1,24): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts(1,26): error TS1005: ';' expected.
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts(1,13): error TS2304: Cannot find name 'implements'.
tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts(1,24): error TS2304: Cannot find name 'A'.


==== tests/cases/conformance/parser/ecmascript5/InterfaceDeclarations/parserInterfaceDeclaration2.ts (5 errors) ====
    interface I implements A {
                ~~~~~~~~~~
!!! error TS1005: '{' expected.
                           ~
!!! error TS1005: ';' expected.
                             ~
!!! error TS1005: ';' expected.
                ~~~~~~~~~~
!!! error TS2304: Cannot find name 'implements'.
                           ~
!!! error TS2304: Cannot find name 'A'.
    }